# Note: This crate must be built using do.sh

[package]
name = "serum_assert_owner"
version = "0.1.0"
repository = "https://github.com/project-serum/serum-dex"
edition = "2018"

[dependencies]
solana-program = "1.10.41"

[lib]
crate-type = ["cdylib", "lib"]
name = "serum_assert_owner"

[dev-dependencies]
