# Note: This crate must be built using do.sh

[package]
name = "openbook_assert_owner"
version = "0.1.0"
repository = "https://github.com/openbook-dex/program"
edition = "2018"

[dependencies]
solana-program = "1.10.41"

[lib]
crate-type = ["cdylib", "lib"]
name = "openbook_assert_owner"

[dev-dependencies]
