[package]
name = "serum_dex"
version = "0.5.10"
description = "Serum DEX"
repository = "https://github.com/project-serum/serum-dex"
edition = "2018"
license = "Apache-2.0"
authors = ["Serum Foundation <foundation@projectserum.com>"]

[features]
program = []
client = []
fuzz = ["arbitrary"]
test = []
default = ["program"]
no-entrypoint = []

[dependencies]
anchor-lang = ">=0.25.0"
solana-program = "1.10.41"
solana-security-txt = "1.0.2"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
serde = "1.0.150"
itertools = "0.10.5"
without-alloc = "0.2.2"
num_enum = "0.5.7"
static_assertions = "1.1.0"
bincode = "1.3.3"
enumflags2 = "0.6.4"
field-offset = "0.3.4"
thiserror = "1.0.37"
safe-transmute = "0.11.2"
arbitrary = { version = "0.4.7", features = ["derive"], optional = true }
num-traits = "0.2.15"
arrayref = "0.3.6"
bytemuck = "1.12.3"
byteorder = "1.4.3"
default-env = "0.1.1"

[lib]
crate-type = ["cdylib", "lib"]

[dev-dependencies]
rand = "0.7.3"
hexdump = "0.1.0"
proptest = "1.0.0"
proptest-derive = "0.3.0"
bumpalo = { version = "3.4.0", features = ["collections"] }

[profile.release]
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[profile.test]
opt-level = 2
