[package]
name = "psyfi-serum-dex-permissioned"
version = "0.5.11"
edition = "2018"
description = "Serum DEX Permissioned markets library for use with Anchor based caller programs"
license = "Apache-2.0"

[features]
devnet = ["anchor-spl/devnet"]

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = { version = "0.26.0", features = ["dex"] }
serum_dex = { version="0.5.4", features = ["no-entrypoint"] }
spl-token = { version = "3.5", features = ["no-entrypoint"] }
